--- a/state_estimation/state_estimation/kalman_filter/CMakeLists.txt
+++ b/state_estimation/state_estimation/kalman_filter/CMakeLists.txt
@@ -34,7 +34,15 @@ set_target_properties(extended_kalman_filter PROPERTIES POSITION_INDEPENDENT_COD
 
 
 # unscented_kalman_filter
-add_library(linearunscented_kalman_filter_kalman_filter STATIC src/unscented_kalman_filter.cpp)
+add_library(unscented_kalman_filter STATIC src/unscented_kalman_filter.cpp)
+target_include_directories(unscented_kalman_filter PUBLIC
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+  $<INSTALL_INTERFACE:include>
+  ${CMAKE_CURRENT_SOURCE_DIR}/include
+)
+target_link_libraries(unscented_kalman_filter PUBLIC Eigen3::Eigen)
+set_target_properties(unscented_kalman_filter PROPERTIES POSITION_INDEPENDENT_CODE ON)
+
 
 
 
