--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,42 +1,30 @@
 # docker compose exec SRV bash
 # docker compose run --rm SRV bash
 
-x-common-service: &common-service
-  privileged: true
-  environment:
-    - DISPLAY=${DISPLAY}
-    - QT_X11_NO_MITSHM=1
-    - XAUTHORITY=/tmp/.docker.xauth
-    - XDG_RUNTIME_DIR=/run/user/1000
-  network_mode: host
-  tty: true
-  stdin_open: true
-  working_dir: /home/ubuntu
-  command: /bin/bash
-  restart: unless-stopped
-
-x-common-build: &common-build
-  args:
-    UID: ${UID:-1000}
-    GID: ${GID:-1000}
-
-x-common-volumes: &common-volumes
-  - "/etc/localtime:/etc/localtime:ro"
-  - "/tmp/.X11-unix:/tmp/.X11-unix:rw"
-  - "/tmp/.docker.xauth:/tmp/.docker.xauth"
-
-
 services:
-  # dummy:
-  #   <<: *common-service
-  #   build:
-  #     context: docker
-  #     dockerfile: Dockerfile
-  #     <<: *common-build
-  #   image: dummy-image
-  #   container_name: dummy-container
-  #   volumes:
-  #     - "/etc/localtime:/etc/localtime:ro"
-  #     - "/tmp/.X11-unix:/tmp/.X11-unix:rw"
-  #     - "/tmp/.docker.xauth:/tmp/.docker.xauth"
-  #     - ${PWD}/dir:/home/ubuntu/dir:rw
+  dummy:
+    build:
+      context: .docker
+      dockerfile: Dockerfile
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
+    image: dummy-image
+    container_name: dummy-container
+    privileged: true
+    environment:
+      - DISPLAY=${DISPLAY}
+      - QT_X11_NO_MITSHM=1
+      - XAUTHORITY=/tmp/.docker.xauth
+      - XDG_RUNTIME_DIR=/run/user/1000
+    volumes:
+      - "/etc/localtime:/etc/localtime:ro"
+      - "/tmp/.X11-unix:/tmp/.X11-unix:rw"
+      - "/tmp/.docker.xauth:/tmp/.docker.xauth"
+      - ${PWD}/dir:/home/ubuntu/dir:rw
+    network_mode: host
+    tty: true
+    stdin_open: true
+    working_dir: /home/ubuntu
+    command: /bin/bash
+    restart: unless-stopped
